--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
 
-    <title>My Website</title>
+    <title>mytodo.com</title>
   </head>
   <body>
     <header class="header">
       <nav class="nav container">
-        <h1 class="logo">Website</h1>
+        <h1 class="logo">My Todo</h1>
         <ul class="nav-items">
           <li class="nav-item"><a href="#home">Home</a></li>
           <li class="nav-item"><a href="">Todo</a></li>
@@ -23,7 +23,7 @@
         <h2 id="main-heading">
           Manage your tasks <span style="display: none">Hello</span>
         </h2>
-        <button class="btn btn-headline">Learn More</button>
+        <button class="btn btn-headline">Learn How To Use</button>
       </div>
     </header>
 
